--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "Source/SoyLib/"]
-	path = Source/SoyLib/
+[submodule "Source/SoyLib"]
+	path = Source/SoyLib
 	url = https://github.com/SoylentGraham/SoyLib.git
 [submodule "Unity/PopReadPixels/Assets/PopUnityCommon"]
 	path = Unity/PopReadPixels/Assets/PopUnityCommon
